# vkMinecraft

./: .gitattributes  .gitignore  CMakeLists.txt
assets/: config.json
assets/blocks/: dirt.json  grass_block.json
assets/shaders/: block.frag  block.frag.spv  block.vert  block.vert.spv
base/include/: application.h  event.h  input.h  vulkan.h  window.h
base/include/assets/: image.h  json.h  load.h  shader.h
base/include/common/: classes.h
base/include/event/: dispatcher.h  handler.h  publisher.h  scope.h  subscriber.h
base/sources/: main.cpp
base/sources/internal/: assets.cpp  assets.h  assets_image.cpp  assets_json.cpp  assets_shader.cpp  input.cpp  input.h  vulkan.cpp  vulkan.h  window.cpp  window.h
game/: events.h  player.cpp  player.h  renderer.cpp  renderer.h  world.cpp
game/block/: registry.cpp  registry.h  types.h
game/chunk/: chunk.h  generator.cpp  generator.h  manager.cpp  manager.h
game/math/: perlin.cpp  perlin.h
game/mesh/: face_instance.cpp  face_instance.h
game/physical/: entity.h  entity_chunk_system.cpp  entity_chunk_system.h
game/render/: buffer.h  camera.cpp  camera.h  config.h  utility.cpp  utility.h
third/nlohmann/: CMakeLists.txt
tools/respack/: CMakeLists.txt
tools/respack/include/: respack.h
tools/respack_builder/: CMakeLists.txt  main.cpp
tools/respack_builder/collectors/: image.cpp  image.h  json.cpp  json.h  shader.cpp  shader.h
tools/respack_builder/interfaces/: collector.h  writer.cpp  writer.h
